# rag-showcase

./: .gitignore  .gitmodules  Makefile  README.md  atlas.consumer.yml  docs_hooks.py  mkdocs.yml  pyproject.toml
.github/workflows/: atlas-contract.yml  docs.yml
.superpowers/sdd/: final-cleanup-report.md
backend_plugins/: requirements.txt
backend_plugins/rag/: __init__.py  flavors.yaml  models.yaml  plugin.yml  roles.yaml
brand/: rag-showcase.logo
compare/: datasets.yaml  evaluation.py  evaluation.yaml  evaluation_summary.py  flavors.py  flavors.yaml  judge.py  leaderboards.py  report_datasets.py  report_leaderboards.py  run_matrix.py  summarize.py
compose/: rag-overlay.yml
corpus/: README.md  fetch_corpus.py
corpus/adapters/: README.md  cyber_threat_intel.py  gdelt_events.py  openalex_scholarly.py  stark_export.py
corpus/cyber_threat_intel/: 001-g0001.md  002-g0002.md  003-g0003.md  004-g0004.md  005-g0005.md  006-g0006.md  007-g0007.md  008-g0008.md  009-g0009.md  010-g0010.md  011-c0001.md  012-c0002.md  013-c0004.md  014-c0005.md  015-c0006.md  016-c0007.md  017-c0010.md  018-c0011.md  019-c0012.md  020-c0013.md  021-s0001.md  022-s0003.md  023-s0004.md  024-s0007.md  025-s0009.md  026-s0010.md  027-s0011.md  028-s0012.md  029-s0013.md  030-s0014.md  031-s0002.md  032-s0005.md  033-s0006.md  034-s0008.md  035-s0029.md  036-s0039.md  037-s0040.md  038-s0057.md  039-s0075.md  040-s0095.md  (+20 more)
corpus/graph_native/: 001-openai-leadership-crisis.md  002-microsoft-openai-azure-partnership.md  003-anthropic-amazon-google-partnerships.md  004-google-search-antitrust-apple-defaults.md  005-mozilla-firefox-search-revenue.md  006-ai-competition-inquiries.md  007-ftx-alameda-collapse.md  008-ftx-trial-witness-network.md  009-binance-cz-doj-settlement.md  010-crypto-political-donations.md
corpus/keyword_docs/: widget-error-codes.md
demo/: cyber_threat_intel_queries.yaml  gdelt_events_queries.yaml  graph_native_queries.yaml  openalex_scholarly_queries.yaml  queries.yaml  stark_mag_queries.yaml  stark_prime_queries.yaml
docs/: approach-flavor-tuning.md  approach-flows.html  approaches.md  architecture-detailed.html  architecture.html  architecture.md  atlas-lightrag-role-model-spec.md  atlas-reuse-assessment.md  comparison.md  dataset-complexity-report.md  dependency-contracts.md  evaluation-methodology.md  evaluation-results.md  hardware.md  index.md  lazy-graph-rag.md  manifest.yaml
docs/components/: adapters.md  corpus.md  n8n.md
docs/diagrams/: approach-flows.html  approach-flows.md  architecture-detailed.html  architecture.md
docs/guide/: local-graph-runs.md  overview.md  quickstart.md
docs/javascripts/: sortable-tables.js
docs/results/: README.md  live-2026-07-01-graph-native-judgments.json  (+49 more)
ingest/: atlas_job.py  contextual.py  ingest.py
n8n/: README.md  adaptive-rag.workflow.json
register/: register_models.py
scripts/: atlas_preflight.py  eval_preflight.py  reconcile_litellm_aliases.py  remove_legacy_n8n_workflow.js  restore-infra-pin.sh  run-dataset-ladder.py  select_atlas_base_port.py  setup-overlay.sh  start-all.sh  stop-all.sh  verify_adaptive_webhook.py  verify_atlas_runtime.py
tests/: conftest.py  test_adaptive_webhook_verifier.py  test_approach_docs.py  test_atlas_ingestion_jobs.py  test_atlas_port_selection.py  test_compare_flavors.py  test_compare_harness.py  test_dataset_adapter_clis.py  test_dataset_ladder.py  test_dataset_ladder_runner.py  test_dataset_report.py  test_demo_matrix.py  test_docs_hooks.py  test_eval_preflight.py  test_evaluation_leaderboards.py  test_evaluation_manifest.py  test_evaluation_runner.py  test_evaluation_summary.py  test_fetch_corpus.py  test_graph_native_corpus.py  test_infra_pin_guard.py  test_judge.py  test_lightrag_overlay.py  test_litellm_model_manifest.py  test_n8n_workflow_contract.py  test_n8n_workflow_manifest.py  test_plugin_manifest_contract.py  test_reconcile_litellm_aliases.py  test_run_matrix.py  test_startup_automation.py
(+65 files in other folders)
