[project]
# Not published or pip-installed as a library: the plugin package is bind-mounted
# into Atlas's backend at runtime, and its runtime deps come from the Atlas
# backend image + backend_plugins/requirements.txt (installed by the plugin
# seam). This pyproject defines only the local dev/test environment — hence no
# [project].dependencies; see [dependency-groups] below.
name = "rag-showcase"
version = "0.1.0"
description = "Six-approach RAG comparison showcase over Atlas"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["backend_plugins", "."]
asyncio_mode = "auto"
testpaths = ["backend_plugins/rag/tests", "tests"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "httpx>=0.27", "pyyaml>=6", "fastapi>=0.110,<0.137", "pydantic>=2"]
