[project]
# Not published or pip-installed as a library: the plugin package is bind-mounted
# into Atlas's backend at runtime, and its runtime deps come from the Atlas
# backend image + backend_plugins/requirements.txt (installed by the plugin
# seam). This pyproject defines only the local dev/test environment — hence no
# [project].dependencies; see [dependency-groups] below.
name = "rag-showcase"
version = "0.1.0"
description = "Six-approach RAG comparison showcase over Atlas"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["backend_plugins", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"  # pin per-test loops; avoid pytest-asyncio's unset-default ambiguity
testpaths = ["backend_plugins/rag/tests", "tests"]

[tool.ruff]
# infra/ is the vendored Atlas submodule — not ours to lint or modify.
extend-exclude = ["infra"]
# `ruff check` is the lint gate. `ruff format` is deliberately NOT adopted: the
# repo's compact hand-wrapped style (long lines to ~116 cols, no blank line after
# module docstrings) is intentional, and a one-time reformat would be a ~2,100-line
# noise diff. Do not run `ruff format` here.

[tool.ruff.lint.per-file-ignores]
# Tests use the compact `app = FastAPI(); app.include_router(...)` setup idiom
# consistently across the suite; accept E702 (multiple statements on one line)
# there. Kept active for non-test code, where a semicolon is a real smell.
"**/tests/*.py" = ["E702"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21", "httpx>=0.27", "pyyaml>=6", "fastapi>=0.110,<0.137", "pydantic>=2"]
# Docs site (MkDocs Material) — opt-in, not installed by a default `uv sync`.
# Build/serve locally with: uv run --group docs mkdocs serve
docs = ["mkdocs-material>=9.5,<10", "mkdocs-include-markdown-plugin>=6,<8"]
